--- a/src/navbar/assets/styles/Navbar.css
+++ b/src/navbar/assets/styles/Navbar.css
@@ -26,7 +26,7 @@
   width: 100%;
   height: 100%;
   background-color: #2f3542;
-  transform: translateX(-100%);
+  transform: translateX(-150%);
   transition: all 0.3s ease;
   z-index: 2;
 }
